--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 a:hover {
-  @apply text-primary;
+  @apply text-primary hover:text-primary transition duration-200 ease-in-out ;
 }
 
 h1 {
@@ -23,23 +23,23 @@ h3 {
 }
 
 .image-text-block {
-    @apply 2xl:container sm:mx-auto flex flex-col sm:flex-row px-sm pt-sm sm:pt-0 sm:px-0;
+    @apply 2xl:container md:mx-auto flex flex-col md:flex-row px-sm pt-sm md:pt-0 md:px-0;
 }
 
 .image-text-block img {
-    @apply w-full sm:w-1/3 object-cover rounded-lg sm:m-sm z-0;
+    @apply w-full md:w-1/3 object-cover rounded-lg md:m-sm z-0;
 }
 
 .image-text-block .text-block {
-    @apply sm:w-2/3 w-[95%] mx-auto p-md sm:p-2xl bg-secondary-light rounded-lg sm:my-lg z-10 shadow-lg;
+    @apply md:w-2/3 w-[95%] mx-auto p-md md:p-2xl bg-secondary-light rounded-lg md:my-lg z-10 shadow-lg;
 }
 
 .image-text-block .text-block:first-child {
-    @apply sm:-mr-xl sm:ml-auto -mt-lg sm:mt-lg;
+    @apply md:-mr-xl md:ml-auto -mt-lg md:mt-lg;
 }
 
 .image-text-block .text-block:last-child {
-    @apply sm:-ml-xl sm:mt-lg -mt-lg;
+    @apply md:-ml-xl md:mt-lg -mt-lg;
 }
 
 .text-block h2 {
@@ -75,4 +75,45 @@ summary::after {
 /* Rotate arrow when open */
 details[open] summary::after {
     transform: rotate(90deg);
+}
+
+
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+  }
 }
